# rag-ai-project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  ~$rag.docx
backend/: README.md
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/bootstrap/: __init__.py  dev_rbac_seed.py  dev_seed_dataset.py
backend/app/common/: constants.py  enums.py  utils.py
backend/app/config/: feature_flags.py  secrets.py  settings.py
backend/app/database/: base.py  session.py  unit_of_work.py
backend/app/observability/: audit.py  logging.py  metrics.py  tracing.py
backend/app/security/: jwt.py  middleware.py  oauth2.py  password.py  policies.py  rbac.py
backend/app/services/: audit_service.py  auth_service.py  config_service.py  department_service.py  document_access_service.py  document_service.py  ingestion_service.py  rag_service.py  rbac_service.py  retrieval_service.py  scope_builder_service.py  secure_retriever.py  secure_retriever_service.py
backend/app/workers/: celery_app.py  (+3 more)
backend/deployment/: Dockerfile  docker-compose.yml
backend/scripts/: bootstrap.sh
backend/tests/: test_document_management_api_service.py  test_secure_access_model.py
data/text_files/: cloud_infrastructure_overview.txt  cybersecurity_foundations.txt
data/vector_store/: chroma.sqlite3
docs/: access_policy.example.json  backend_runtime_deployment.md  enterprise_fastapi_backend_architecture.md  rbac_backend.md  single_tenant_rag_architecture.md
docs/testing/: TP-001_phase1_mvp_foundation_v1.0.md  master_test_index.md
notebook/: documents.ipynb  embadings_openai.ipynb  version_1.ipynb
src/rag_v2/: __init__.py  answer.py  citations.py  config.py  data_loader.py  embeddings.py  indexing.py  postprocess.py  prompting.py  retrieval.py  smart_indexing.py  store.py  text.py
(+58 files in other folders)
